Rename block-templates and block-template-part folders for WordPress 5.9  #10

--- a/templates/front-page.html
+++ b/templates/front-page.html
@@ -2,7 +2,7 @@
 <div class="WP_DEBUG">Wizzie front-page.html</div>
 <!-- /wp:html -->
 
-<!-- wp:template-part {"slug":"header","theme":"wizzie","tagName":"header","align":"full"} /-->
+<!-- wp:template-part {"slug":"header","tagName":"header","align":"full"} /-->
 
 <!-- wp:woocommerce/featured-product {"editMode":false,"productId":69011} -->
 <!-- wp:button {"align":"center"} -->
