--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 /*
 Theme Name: Wizzie
 Theme URI: https://www.oik-plugins.com/oik-themes/wizzie
-Description: Experimental WooCommerce Full Site Editing child theme of Fizzie
+Description: WooCommerce Full Site Editing child theme of Fizzie
 Author: Bobbing Wide
 Author URI: https://www.oik-plugins.com/author/bobbingwide
-Version: 0.1.1
+Version: 1.0.0
 Tags: blocks, Gutenberg, FSE, oik, Full Site Editing, single-column, WooCommerce
-Requires at least: 5.5.1
+Requires at least: 5.8
 Requires PHP: 7.3
 License: GPL-2.0+
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
