Register overrides after Fizzie #13

--- a/templates/front-page.html
+++ b/templates/front-page.html
@@ -16,7 +16,7 @@
 
 <!-- wp:template-part {"slug":"customer-reviews","theme":"wizzie","tagName":"section"} /-->
 
-<!-- wp:template-part {"slug":"search","theme":"wizzie","layout":{"inherit":true}} /-->
+<!-- wp:template-part {"slug":"search","layout":{"inherit":true}} /-->
 
 <!-- wp:template-part {"slug":"page-footer","theme":"wizzie","tagName":"footer","layout":{"inherit":true}} /-->
 
