--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@ Theme Name: Wizzie
 Theme URI: https://www.oik-plugins.com/oik-themes/wizzie
 Description: WooCommerce Full Site Editing child theme of Fizzie
 Author: Bobbing Wide
-Author URI: https://www.oik-plugins.com/author/bobbingwide
-Version: 1.0.0
+Author URI: https://bobbingwide.com/about-bobbing-wide
+Version: 1.1.0
 Tags: blocks, Gutenberg, FSE, oik, Full Site Editing, single-column, WooCommerce
 Requires at least: 5.8
 Requires PHP: 7.3
